# lexigaze

./: .env.example  .gitignore  Global_Metrics_N37.csv  README.md  main.py  pyproject.toml
archive/prompts/: examples.txt
archive/skills/: skill_ablation_study.md  skill_attention_transition.md  skill_cognitive_gated_attention.md  skill_cross_subject_benchmark.md  skill_evaluation_pipeline.md
docs/: 2026-05-02_Error_Analysis.md  2026-05-02_L2_Unified_Benchmark.md  2026-05-02_NeurIPS_Ablation_Study.md  2026-05-04_POPULATION_RESTORATION_REPORT.md  COGNITIVE_MASS.md  PROJECT.md  SKILL_IMPLEMENTATION_LOG.md
docs/NeurIPS/: COGNITIVE_MASS.md  DATA.md  DATASET_INSIGHTS.md  EVAL_RESTORATION_PLAN.md  PROJECT.md  RESULT.md  SKILL_IMPLEMENTATION_LOG.md  SKILL_USAGE.md  VISUALIZATION_GUIDE.md  latex_refs.md  manuscript_v2_ch.md  manuscript_v2_en.md  v1_ch.md  v1_en.md
results/: interim_ablation.csv
skills/: skill_cognitive_mass.md  skill_data_restoration_and_evaluation.md  skill_dataset_statistics.md  skill_dynamic_cognitive_mass.md  skill_em_auto_calibration.md  skill_em_initializaton.md  skill_full_scale_ablation.md  skill_neurips_figures.md  skill_neurips_paper_draft.md  skill_noise_stress_test.md  skill_oculomotor_transition.md  skill_psycholinguistic_transitionskill_psycholinguistic_transition.md  skill_visualization.md  skill_viterbi_gaze_decoder.md
tutorial/: README.md  cal_usage.py  calibrate.py  colab_neuro_symbolic.py  default_template.md  generate_synthetic.py  heatmap.py  index.html  server.py  skill_builder.py  text_model.py  visualize.py
(+220 files in other folders)
